[tool.poetry]
name = "layer-zero-bridger"
version = "0.1.0"
description = "A tool for automating and managing USDC and USDT transfers across various blockchains."
authors = ["tmlnv <tmlnv@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
web3 = "6.0.0"
loguru = ">=0.7.0,<0.8.0"
termcolor = ">=2.3.0,<2.4.0"
python-dotenv = ">=1.0.0,<1.1.0"
prettytable = ">=3.8.0,<3.9.0"
colorama = ">=0.4.6,<0.5.0"
tqdm = ">=4.65.0,<4.67.0"
requests = ">=2.30.0,<2.33.0"
hexbytes = ">=0.3.0,<0.4.0"
aiohttp = ">=3.8.4,<3.10.0"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
